res-tf/res-kf-namespace-collaborators/charts/templates/AuthorizationPolicy/profiles-namespace-collaborators-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: user-${kubeflow_safe_collaborator_email}-clusterrole-${kubeflow_collaborator_role}
  namespace: ${kubeflow_namespace_name}
  annotations:
    role: ${kubeflow_collaborator_role}
    user: ${kubeflow_raw_collaborator_email}
spec:
  rules:
    - from:
        - source:
            ## for more information see the KFAM code:
            ## https://github.com/kubeflow/kubeflow/blob/v1.8.0/components/access-management/kfam/bindings.go#L79-L110
            principals:
              ## required for kubeflow notebooks
              ## TEMPLATE: "cluster.local/ns/<ISTIO_GATEWAY_NAMESPACE>/sa/<ISTIO_GATEWAY_SERVICE_ACCOUNT>"
              - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"

              ## required for kubeflow pipelines
              ## TEMPLATE: "cluster.local/ns/<KUBEFLOW_NAMESPACE>/sa/<KFP_UI_SERVICE_ACCOUNT>"
              - "cluster.local/ns/kubeflow/sa/ml-pipeline-ui"

              ## unsure if necessary
              ## - "cluster.local/ns/kubeflow/sa/centraldashboard"
      when:
        - key: request.headers[kubeflow-userid]
          values:
            - ${kubeflow_raw_collaborator_email}
